--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "engines": {
     "node": ">=20.0.0"
   },
-  "dependencies": {
-    "express": "^5.1.0",
-    "playwright": "^1.47.0",
-    "dotenv": "^16.3.1"
-  }
+ "dependencies": {
+  "express": "^5.1.0",
+  "axios": "^1.6.7",
+  "cheerio": "^1.0.0-rc.12",
+  "playwright": "^1.47.0",
+  "dotenv": "^16.3.1"
+}
 }
