--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "engines": {
     "node": ">=20.0.0"
   },
- "dependencies": {
-  "express": "^5.1.0",
-  "axios": "^1.6.7",
-  "cheerio": "^1.0.0-rc.12",
-  "playwright": "^1.47.0",
-  "dotenv": "^16.3.1"
-}
+  "dependencies": {
+    "express": "^5.1.0",
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
+    "p-limit": "^4.0.0",
+    "dotenv": "^16.3.1",
+    "playwright": "^1.47.0"
+  }
 }
